@@ -1,0 +1,6 @@
+---
+selinux::mcstrans_service_name: mcstransd
+
+selinux::manage_restorecond_package: false
+selinux::manage_restorecond_service: false
+selinux::restorecond_package_name: policycoreutils-restorecond
